crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__viewed_file_shows_a_check_and_comment_count_in_the_sidebar.snap
---
source: crates/diffler/src/ui/diff.rs
expression: terminal.backend()
---
" c add comment · r reply · m mark viewed · C see comment list · ? help                                                  "
" Files                           Diff                                                                                   "
"▌▾ src                    +1 -1  modified  src/lib.rs ✓ viewed · 1 comment                                   +1 -1 █████"
"▌  ● lib.rs ✓ ·1          +1 -1  answer                                                                                 "
" + ci.yml                 +1 -0  @@ -1,3 +1,3 @@                                                                        "
" ○ todo.md                +1 -0     1    1 pub fn answer() -> u32 {                                                     "
"                                ▌   2          41                                                                       "
"                                ▌        2     42                                                                       "
"                                  ▌ reviewer · open                                                                     "
"                                  ▌ look                                                                                "
"                                  ▌                                                                                     "
"                                    3    3 }                                                                            "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main · mcp off · viewed 1/3 files                                                                        "
