crates/diffler/src/ui/snapshots/diffler__ui__diff__tests__viewed_walk_folds_files_and_advances_the_cursor.snap
---
source: crates/diffler/src/ui/diff.rs
expression: render(&mut app).backend()
---
" Hint: c comment  V select  r reply  R resolve  v viewed  <tab> fold  y/Y copy  q back                                  "
" ▸ new file  ci.yml ✓ viewed                                                                                            "
" ▸ modified  src/lib.rs ✓ viewed                                                                                        "
" ▾ untracked todo.md                                                                                                    "
" @@ -0,0 +1,1 @@                                                                                                        "
"         1 - [ ] review                                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" DIFF  fixture@main  mcp off  viewed 2/3 files                                                                          "
